# jug0

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: deploy-jug0.yml
db/: README.md  schema.sql
db/migrations/: 001_init.sql  002_add_username.sql  003_add_message_id.sql  004_replace_stateless_with_state.sql  005_add_handles.sql  006_add_persistent_handle_chat_index.sql  007_add_external_id.sql  008_add_agent_avatar.sql
db/seeds/: dev_seed.sql
db/src/: lib.rs  m20240102_000001_seed.rs
src/: auth.rs  errors.rs  main.rs
src/entities/: agents.rs  api_keys.rs  chats.rs  handles.rs  messages.rs  mod.rs  model_sync_log.rs  models.rs  organizations.rs  prompts.rs  users.rs  workflows.rs
src/handlers/: agents.rs  api_keys.rs  auth.rs  context.rs  embeddings.rs  files.rs  handles.rs  memories.rs  messages.rs  mod.rs  models.rs  organizations.rs  prompts.rs  resources.rs  search.rs  usage.rs  users.rs  workflows.rs
src/handlers/chat/: helpers.rs  logic.rs  mod.rs  types.rs
src/providers/: mod.rs
src/providers/cache/: mod.rs  redis.rs
src/providers/embedding/: mod.rs  openai.rs  qwen.rs
src/providers/llm/: anthropic.rs  chatgpt.rs  claude_code.rs  deepseek.rs  factory.rs  gemini.rs  mod.rs  openai.rs  qwen.rs
src/providers/memory/: mod.rs  (+1 more)
src/repositories/: agents.rs  prompts.rs
src/request/: agents.rs  chats.rs  mod.rs  users.rs
src/response/: agents.rs  chats.rs  mod.rs  models.rs  prompts.rs  resources.rs  usage.rs  workflows.rs
src/services/: cache.rs  mcp.rs  mod.rs  models.rs  qdrant.rs  search.rs
(+8 files in other folders)
