[package]
name = "jug0"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
sea-orm = { version = "1.0", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
async-openai = "0.23"
uuid = { version = "1.0", features = ["v4", "serde"] }
futures = "0.3"
async-stream = "0.3"
tracing = "0.1"
anyhow = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-stream = "0.1"
thiserror = "1.0"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
eventsource-stream = "0.2"
regex = "1.10"
lazy_static = "1.4"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.0"
tokio-util = "0.7"
scopeguard = "1.2"
jsonwebtoken = "9.2"
axum-extra = { version = "0.9", features = ["typed-header"] }
headers = "0.4"
bcrypt = "0.15"

# 【新增】API Key 生成与哈希
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
hmac = "0.12"
base64 = "0.22"
qdrant-client = "1.10"
tower-http = { version = "0.5", features = ["cors", "fs"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }